--- a/app/views/partials/post/delete.jade
+++ b/app/views/partials/post/delete.jade
@@ -2,6 +2,6 @@ h2 {{post.title}}
 div: p {{post.text}}
 p
     | Are you sure you want to delete this post? 
-    button(ng-click='postDelete()', class='btn') yeap
+    button(ng-click='postDelete()', class='btn') yep
     |  - 
     button(ng-click='home()', class='btn') noupe 
